[package]
name = "processor"
version = "0.1.0"
authors = ["Felipe Diniello <felipe.diniello@globant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9.1"
toml = "0.5.8"
r2d2_mysql = "18.0.0"
r2d2 = "0.8"
mysql = "*"
serde = {version = "1.0.118", features = ["derive"] }
serde_json = "1.0"